@@ -1,0 +1,12 @@
+package com.alphatica.alis.trading.account.scorer;
+
+import com.alphatica.alis.trading.account.Account;
+
+import java.util.Map;
+
+public class ProfitableMarkets implements AccountScorer {
+	@Override
+	public double score(Account account, Map<String, Double> customStats) {
+		return account.getAccountHistory().countProfitableMarkets();
+	}
+}
